# EvolutionBoard

./: .cproject  .project  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
Hardware/: MainCpp.cpp
Hardware/Atollic/: EvolutionBoard.elf.launch  EvolutionBoard.ioc  STM32F401RB_FLASH.ld
Hardware/Atollic/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_def.h
Hardware/Atollic/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Hardware/Atollic/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Logic/: CMakeLists.txt
Logic/Conan/: conanfile.py
Project/: .cproject  .project  CMakeLists.txt  component.mk  sdkconfig  sdkconfig.old
Project/Hardware/: CMakeLists.txt  MainCppHw.cpp  MainCppHw.h  Tasks.cpp  Tasks.h  component.mk  main.c
Project/Hardware/Action/: Action.cpp  Action.h
Project/Hardware/Activity/: Activity.cpp  Activity.h  ActivityBluetooth.cpp  ActivityBluetooth.h  ActivityWeather.cpp  ActivityWeather.h
Project/Hardware/Bitmap/: BitmapHw.cpp  BitmapHw.h
Project/Hardware/Buttons/: ButtonsHw.cpp  ButtonsHw.h
Project/Hardware/Communication/: WeatherMeasureComm.cpp  WeatherMeasureComm.h
Project/Hardware/Display/: DisplayHw.cpp  DisplayHw.h  ILI9341.cpp  ILI9341.h
Project/Hardware/Draftsman/: DraftsmanHw.cpp  DraftsmanHw.h  ILI9341.cpp  ILI9341.h
Project/Hardware/Logger/: LoggerHw.h
Project/Hardware/Networking/: WiFiHw.cpp  WiFiHw.h
Project/Hardware/NumericKeyboard/: NumericKeyboard.cpp  NumericKeyboard.h
Project/Hardware/Peripheral/: FlashHw.cpp  FlashHw.h  GpioHw.cpp  GpioHw.h  RtosHw.cpp  RtosHw.h  SpiHw.cpp  SpiHw.h  SpiLcdHw.cpp  SpiLcdHw.h  SpiTouchHw.cpp  SpiTouchHw.h  SystemTimeHw.cpp  TimerHw.cpp  TimerHw.h
Project/Hardware/Peripheral/SpiHw/: SpiHw.cpp  SpiHw.h  SpiLcdHw.cpp  SpiLcdHw.h  SpiTouchHw.cpp  SpiTouchHw.h
Project/Hardware/Protocols/HttpClient/: HttpClientHw.cpp  HttpClientHw.h
Project/Hardware/Resources/: Font.cpp  Font.h  Resources.cpp  Resources.h
Project/Hardware/Tasks/: Tasks.cpp  Tasks.h
Project/Hardware/Touch/: TouchHw.cpp  TouchHw.h
Project/Hardware/Widgets/: Widget.cpp  Widget.h  WidgetEdit.cpp  WidgetEdit.h
Project/Logic/: NoCopyableAndNoMovable.cpp  NoCopyableAndNoMovable.h  Settings.h
Project/Logic/Action/: ActionId.h
Project/Logic/Activities/: PresentationActivity.cpp  PresentationActivity.h
Project/Logic/Activity/: Activity.cpp  Activity.h
Project/Logic/BitmapConverter/: BitmapConverter.py  README.md
Project/Logic/BitmapConverter/Bitmaps/: KeyNum0Down.xcf  KeyNum0Up.xcf  KeyNum1Down.xcf  KeyNum1Up.xcf  KeyNum2Down.xcf  KeyNum2Up.xcf  KeyNum3Down.xcf  KeyNum3Up.xcf  KeyNum4Down.xcf  KeyNum4Up.xcf  KeyNum5Down.xcf  KeyNum5Up.xcf  KeyNum6Down.xcf  KeyNum6Up.xcf  KeyNum7Down.xcf  KeyNum7Up.xcf  KeyNum8Down.xcf  KeyNum8Up.xcf  KeyNum9Down.xcf  KeyNum9Up.xcf
Project/Logic/BitmapConverter/Bitmaps/Font/: C.h  E.h  F.h  H.h  I.h  J.h  M.h  N.h  P.h  T.h  V.h  backslash.h  dash.h  dolar.h  dx.h  ex.h  exclamation.h  exponent.h  four.h  hash.h  hx.h  ix.h  kx.h  lx.h  multiply.h  question.h  qx.h  rx.h  seven.h  three.h  triangleleftbracket.h  trianglerigthbracket.h  tx.h  ux.h  xx.h  zx.h
Project/Logic/BitmapConverter/Bitmaps/Variables/: Temperature.h  WindSpeed.h
Project/Logic/BitmapConverter/Images/: BitmapId.h  BleBackground.h  ButtonsImages.h  Edit.h  FontImages.h  KeyboardImages.h  VariablesImages.h  WeatherBackground.h  background.h  image.h  test.h
Project/Logic/BitmapConverter/Images/Buttons/: AButtonDown.h  AButtonUp.h  BButtonDown.h  (+11 more)
Project/Logic/Communication/: WeatherMeasureComm.cpp  WeatherMeasureComm.h
Project/Logic/Communication/Json/: Json.cpp  Json.h
Project/Logic/Communication/WeatherMeasureMsgType/: WeatherMeasureMsgType.cpp  WeatherMeasureMsgType.h
Project/Logic/Communication/WeatherMeasureParser/: WeatherMeasureParser.cpp  WeatherMeasureParser.h
Project/Logic/NumericKeyboard/: NumericKeyboard.cpp  NumericKeyboard.h
Project/Logic/Project/Display/: Display.cpp  Display.h
Project/Logic/Project/Peripheral/: Gpio.cpp  Gpio.h  Rtos.h  SystemTime.cpp  SystemTime.h  Timer.cpp  Timer.h
Project/Logic/Protocols/HttpClient/: HttpClient.cpp  HttpClient.h
Project/Logic/Resources/: Font.cpp  Font.h  Resources.cpp  Resources.h
Project/Logic/Resources/BitmapConverter/: BitmapConverter.py  README.md
Project/Logic/Resources/Bitmaps/: Bitmaps.h
Project/Logic/Settings/: Settings.cpp  Settings.h
Project/Logic/SystemEvents/: SystemEvents.cpp  SystemEvents.h
Project/Logic/Touch/: Touch.h
Project/Logic/Windows/: BaseWindow.cpp  BaseWindow.h  SystemEvents.h
Test/: Tests.vcxproj.filters  main.cxx  packages.config
Test/Hardware/: main.cxx
Tests/: Tests.sln  Tests.vcxproj  Tests.vcxproj.filters  main.cxx  packages.7z
Tests/Project/Hardware/: MainCppFixtureHw.cpp  MainCppFixtureHw.h  MainCppHw.cpp  MainCppHw.h
Tests/Project/Hardware/Communication/: WeatherMeasureComm.h
Tests/Project/Hardware/HttpClient/: HttpClientHw.h
Tests/Project/Hardware/Peripheral/: SpiLcdHw.h  SpiTouchHw.h
Tests/Project/Hardware/Tasks/: Tasks.cpp  Tasks.h
Tests/Project/Logic/WeatherMeasure/: WeatherMeasureFixture.cxx  WeatherMeasureFixture.hxx
main/: CMakeLists.txt  decode_image.c  pretty_effect.c  spi_master_example_main.c
main/Doc/: LCD2.8 SPI ILI9341 link.txt
main/Hardware/: MainCppHw.cpp  MainCppHw.h  main.c
main/Hardware/Display/: DisplayHw.cpp  DisplayHw.h  ILI9341.cpp  ILI9341.h
main/Hardware/Logger/: LoggerHw.h
main/Hardware/Networking/: WiFiHw.cpp  WiFiHw.h
main/Hardware/Peripheral/: Command.c  Command.h  FlashHw.cpp  FlashHw.h  GpioHw.cpp  GpioHw.h  RtosHw.cpp  RtosHw.h  SpiHw.cpp  SpiHw.h  SystemTimeHw.cpp  SystemTimeHw.h  TimerHw.cpp  TimerHw.h
main/Logic/: CMakeLists.txt
main/Logic/Conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
main/Logic/Project/: Display.cpp  Display.h  Settings.cpp  Settings.h
main/Logic/Project/Display/: Display.h
main/Logic/Project/Networking/: WiFi.cpp  WiFi.h
main/Logic/Project/Peripheral/: Gpio.cpp  Gpio.h  Rtos.cpp  Rtos.h  Spi.cpp  Spi.h  SystemTime.cpp  SystemTime.h
(+176 files in other folders)
