SET (PackageIncludePaths "C:/Users/sitko/.conan/download")
SET (PackageSourcePaths main.c
                        MainCppHw.cpp
                        Touch/TouchHw.cpp
                        Action/Action.cpp
                        Widgets/Widget.cpp
                        Draftsman/ILI9341.cpp
                        Networking/WiFiHw.cpp
                        Peripheral/RtosHw.cpp
                        Peripheral/GpioHw.cpp
                        Peripheral/FlashHw.cpp
                        Peripheral/TimerHw.cpp
                        Draftsman/DraftsmanHw.cpp
                        Peripheral/SpiHw/SpiHw.cpp
                        Peripheral/SystemTimeHw.cpp
                        Activity/ActivityWeather.cpp
                        Peripheral/SpiHw/SpiLcdHw.cpp
                        Activity/ActivityBluetooth.cpp
                        Peripheral/SpiHw/SpiTouchHw.cpp
                        Protocols/HttpClient/HttpClientHw.cpp         
                        ../Logic/Resources/Font.cpp
                        ../Logic/Activity/Activity.cpp
                        ../Logic/Settings/Settings.cpp
                        ../Logic/Resources/Resources.cpp
                        ../Logic/Communication/Json/Json.cpp                      
                        ../Logic/Protocols/HttpClient/HttpClient.cpp
                        ../Logic/Communication/WeatherMeasureComm.cpp
                        ../Logic/Communication/WeatherMeasureParser/WeatherMeasureParser.cpp
                        ../Logic/Communication/WeatherMeasureMsgType/WeatherMeasureMsgType.cpp
                        ${PackageIncludePaths}/Spi/Project/Spi.cpp
                        ${PackageIncludePaths}/WiFi/Project/WiFi.cpp
                        ${PackageIncludePaths}/Gpio/Project/Gpio.cpp
                        ${PackageIncludePaths}/Rtos/Project/Rtos.cpp
                        ${PackageIncludePaths}/Touch/Project/Touch.cpp
                        ${PackageIncludePaths}/Timer/Project/Timer.cpp
                        ${PackageIncludePaths}/Flash/Project/Flash.cpp
                        ${PackageIncludePaths}/Utils/Project/Utils.cpp
                        ${PackageIncludePaths}/Bitmap/Project/Bitmap.cpp
                        ${PackageIncludePaths}/Logger/Project/Logger.cpp
                        ${PackageIncludePaths}/Draftsman/Project/Draftsman.cpp
                        ${PackageIncludePaths}/SystemTime/Project/SystemTime.cpp
                        ${PackageIncludePaths}/Communication/Project/Communication.cpp
                        ${PackageIncludePaths}/CircularBuffer/Project/CircularBuffer.cpp
    )

IDF_COMPONENT_REGISTER (SRCS ${PackageSourcePaths}
                             INCLUDE_DIRS
                             .
                             Touch
                             Logger
                             Action
                             Widgets
                             Activity
                             Draftsman
                             Peripheral
                             Networking
                             Peripheral/SpiHw
                             Protocols/HttpClient
                             ../Logic
                             ../Logic/Settings
                             ../Logic/Activity
                             ../Logic/Resources
                             ../Logic/Communication
                             ../Logic/Communication/Json
                             ../Logic/Protocols/HttpClient
                             ../Logic/BitmapConverter/Images
                             ../Logic/Communication/WeatherMeasureParser
                             ../Logic/Communication/WeatherMeasureMsgType
                             ${PackageIncludePaths}/Spi/Project
                             ${PackageIncludePaths}/WiFi/Project
                             ${PackageIncludePaths}/Gpio/Project
                             ${PackageIncludePaths}/Rtos/Project
                             ${PackageIncludePaths}/Touch/Project
                             ${PackageIncludePaths}/Timer/Project
                             ${PackageIncludePaths}/Flash/Project
                             ${PackageIncludePaths}/Utils/Project
                             ${PackageIncludePaths}/Bitmap/Project
                             ${PackageIncludePaths}/Logger/Project
                             ${PackageIncludePaths}/Draftsman/Project
                             ${PackageIncludePaths}/SystemTime/Project
                             ${PackageIncludePaths}/Communication/Project
                             ${PackageIncludePaths}/CircularBuffer/Project
                             REQUIRES "nvs_flash" "esp_http_client" "json"
                       )
                       
COMPONENT_COMPILE_OPTIONS(-std=c++17)